# radar2026

./: .gitignore  AGENTS.md
config/camera/: cs016.yaml  cs016_handeye.yaml  cs200_handeye.yaml  hik_cs200.yaml
config/detector/: module.txt  yolo.yaml
config/map/: 204.yaml  field_image.yaml  guess_pts.yaml
config/solver/: 204.txt  cs200_calibration.yaml  keypoint_6.txt  keypoint_6_2026.txt
src/radar_bringup/: CMakeLists.txt  package.xml
src/radar_bringup/launch/: startall.py
src/radar_core/: CMakeLists.txt  package.xml
src/radar_core/include/detector/: outpost_config_ui.hpp
src/radar_core/include/map/: map_tactical_analyzer.hpp  raycaster.hpp  transform.hpp
src/radar_core/include/solver/: calibration_ui.hpp  pnp_solver.hpp
src/radar_core/include/tracker/: cascade_tracker.hpp  kalman.hpp  point_guesser.hpp
src/radar_core/src/camera/: cameraone_component.cpp  cameratwo_component.cpp  video_component.cpp
src/radar_core/src/detector/: air_detector_component.cpp  netdetector_component.cpp  outpost_config_ui.cpp  posedetector_component.cpp
src/radar_core/src/map/: map_component.cpp  map_tactical_analyzer.cpp  raycaster.cpp  transform.cpp
src/radar_core/src/solver/: calibration_ui.cpp  pnp_solver.cpp  solvepnp_component.cpp
src/radar_core/src/tracker/: cascade_tracker.cpp  hungarian.cpp  kalman.cpp  point_guesser.cpp
src/radar_core/src/utils/: classifier.cpp  classifier.hpp  cuda_preprocess.cu  cuda_preprocess.cuh  model.cpp  model.hpp  pose.cpp  pose.hpp
src/radar_interfaces/: CMakeLists.txt  package.xml
src/radar_interfaces/msg/: DetectResult.msg  DetectResults.msg  GimbalCmd.msg  LidarCluster.msg  LidarClusterResults.msg  RadarMap.msg  SentryTactical.msg  VisionTargetAngle.msg
src/radar_lidar/: CMakeLists.txt  package.xml
src/radar_lidar/include/: cluster.hpp  dynamic_cloud.hpp  localization.hpp
src/radar_lidar/src/: cluster.cpp  dynamic_cloud.cpp  localization.cpp
src/radar_serial/: CMakeLists.txt  package.xml
src/radar_serial/include/: rm_protocol.hpp  serial_driver.hpp
src/radar_serial/src/: serial_node.cpp
src/radar_visualizer/: CMakeLists.txt  package.xml
src/radar_visualizer/include/: main_window.hpp  ros_worker.hpp
src/radar_visualizer/src/: main.cpp  main_window.cpp  ros_worker.cpp
src/watchdog/: start_radar.sh
