<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_core</name>
  <version>0.0.0</version>
  <description>Radar Station Core Package</description>
  <maintainer email="16355965+lzhzhoukang@user.noreply.gitee.com">lzhros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>radar_interfaces</depend>
  <depend>rclcpp_components</depend>
  <depend>opencv</depend>
  <depend>yaml-cpp</depend>
  <depend>std_srvs</depend>
  <depend>Open3D</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>