<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_serial</name>
  <version>1.3.0</version>
  <description>RoboMaster Radar Serial Communication Package</description>
  <maintainer email="your_email@todo.com">lzhros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>radar_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>