<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_visualizer</name>
  <version>0.0.0</version>
  <description>High performance Qt5 Visualizer</description>
  <maintainer email="your_email@todo.todo">lzhros</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>